# dynamics

./: .gitignore  .readthedocs.yaml  README.md  plotter.py  pyproject.toml  requirements.txt  run.py
configuration/: inputs.yml  ode.py
docs/: conf.py  index.md  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/_build/html/_sources/: index.md.txt
docs/source/: Configuration.rst  basic_usage.rst  conf.py  configuration.rst  index.rst  new_systems.rst  usage.rst
dynamics/: system.py
output/: timeseries.csv
